assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Skranji:wght@400;700&family=Tillana:wght@500;700&display=swap');

/* generic */

* {
    font-family: Tillana, sans-serif;
    margin: 0;
    padding: 0;
}

h1, h2, h3, h4, h5, h6 {
    font-family: Skranji, Tillana, sans-serif;
    font-weight: 400;
    color:#0F1A20;
}

/* header title & navigation links */

header {
    display: flex;
    flex-wrap: wrap;
    background-color: #37371F;
    width: 100%;
    justify-content: flex-start;
}

/* navigation links */

nav {
    display: flex;
    padding: 0.5rem 0;
    justify-content: flex-start;
    /* width: 35%; */
    align-items: center;
}

nav a {
    border: 2px solid #F4FFF8;
    border-radius: 8px;
    padding: 0.5rem 2rem;
    margin: 0 1rem;
    text-decoration: none;
    background-color: #37371F;
    color: #F4FFF8;
    font-weight: 700;
    font-size: 20px;
    font-family: Skranji, Tillana, sans-serif;
}

nav a:hover, .active {
    color: #37371F;
    background-color: #F4FFF8;
}

/* title */

nav ~ div {
    display: flex;
    flex-wrap: wrap;
    padding: 0.5rem 0;
    width: 65%;
    justify-content: center;
    align-items: center;
    position: relative;
}

h1 {
    color: #F4FFF8;
    font-size: 60px;
    margin-top: 1rem;
    position: absolute;
}

header img {
    height: 60px;
    margin-right: 33rem;
}

/* hero image */

#hero-image-box {
    height: 500px;
    width: 100%;
    overflow: hidden;
    border: 3px solid green;
}

/* Image by <a href="https://pixabay.com/users/timhill-5727184/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=2443093">Tim Hill</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=2443093">Pixabay</a> */

#hero-image {
    height: inherit;
    background-image: url(../images/hero-image.jpg);
    background-position: left bottom;
    background-size: auto;
    background-repeat: no-repeat;
    animation-name: hero-diagonal-move;
    animation-duration: 20s;
    animation-timing-function: linear;
    animation-fill-mode: forwards;
}

/* hero image animation - Slow image pan from left to right */

@keyframes hero-diagonal-move {
    0%   {background-position: left bottom;}
    100% {background-position: right center;}
}

/* welcome section */

#welcome-section {
    background-color: #37371F;
    color: #F4FFF8;
    display: flex;
}

.welcome-section-heading {
    color: #F4FFF8;
    font-size: 30px;
    margin-bottom: 0.5rem;
    text-align: center;
    text-decoration: underline;
    border: 1px solid blue;
}

/* welcome section text */

#welcome-section-text {
    flex: 1;
    display: flex;
    flex-direction: column;
    margin: 1rem;
    border: 1px solid blue;
}

#welcome-section-text p {
    border: 1px solid blue;
}

/* welcome section images */

#welcome-section-images {
    flex: 1;
    flex-direction: column;
    display: flex;
    margin: 1rem;
    border: 1px solid blue;
}

#welcome-section-images div {
    border: 1px solid blue;
}

#welcome-section-images h2 {
    border: 1px solid blue;
}

#welcome-section-images h3 {
    color: #F4FFF8;
    border: 1px solid blue;
}

/* pen-y-ghent */

/* whernside */

/* ingleborough */


/* media query for screen size 1400px and under */

@media screen and (max-width: 1400px) {
    
    /* header title & navigation links */

    header {
        justify-content: center;
    }

    /* navigation links */

    nav {
        order: 2;
        justify-content: center;
    }

    nav ~ div {
        order: 1;
        width: 100%;
    }

    nav a {
        padding: 1rem 2rem;
    }
}

/* media query for screen size 950px and under */

@media screen and (max-width: 950px) {


}

/* media query for screen size 650px and under */

@media screen and (max-width: 650px) {

    /* header title & navigation links */

    /* title */

    h1 {
        position: inherit;
        margin-top: 0.5rem;
        font-size: 30px;
    }

    header img {
        height: 35px;
        margin-right: 17rem;
        position: absolute;
    }    

    /* navigation links */

    nav ~ div {
        order: 1;
        width: 100%;
        margin-left: 10%;
    }

    nav a {
        padding: 1rem 1rem;
        margin: 0 0.5rem 0.5rem 0.5rem;
        font-size: 16px;
    }

    /* hero image */

    /* hero image animation - Slow image pan from left to right */

    @keyframes hero-diagonal-move {
        0%   {background-position: 50% 100%;}
        100% {background-position: 50% 20%;}
}

}

